# domashka_web_13_part_2

./: author_data.json  contact_data.json  db_migrate.py  pyproject.toml  quote_data.json
quoteapp/: admin.py  forms.py  models.py  urls.py  views.py
quoteapp/management/commands/: import_data.py
quoteapp/migrations/: 0001_initial.py  0002_mymodel.py  0003_alter_mymodel_data.py
quoteapp/templates/quoteapp/: author_detail.html  authors_list.html  base.html  create_author.html  create_quote.html  create_tag.html  detail.html  index.html  quote_detail.html  quotes_list.html  tag_detail.html  tags_list.html
quotes/: settings.py
users/: forms.py  urls.py  views.py
