[tool.poetry]
name = "domashka-web-10-quoteapp"
version = "0.1.0"
description = ""
authors = ["Vesnani <132687769+Vesnani@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "domashka_web_10_quoteapp"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
psycopg2 = "^2.9.7"
pymongo = "^4.5.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
